Links to SDK from Concepts and vice versa

--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -8,6 +8,7 @@ iconType: "solid"
 import VersionCard from '/snippets/cards/version-card.mdx';
 import TestCard from '/snippets/cards/test-card.mdx';
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
+import SDKProductServiceCard from '/snippets/cards/sdk-product-service-card.mdx';
 
 ## What is a Product?
 
@@ -27,6 +28,9 @@ A product in Galtea is associated with:
   <EvaluationCard />
 </CardGroup>
 
+## SDK Integration
+
+<SDKProductServiceCard />
 
 ## Product Properties
 
