--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -5,6 +5,8 @@ icon: "badge-check"
 iconType: "solid"
 ---
 
+import SDKEvaluationServiceCard from '/snippets/cards/sdk-evaluation-service-card.mdx';
+
 ## What is an Evaluation?
 
 An evaluation in Galtea is a link between a specific [version](/concepts/product/version) of a [product](/concepts/product) and a [test](/concepts/product/test). It serves as the container for all the [evaluation tasks](/concepts/product/evaluation/task) that assess how well the product version performs against the test challenges.
@@ -55,4 +57,8 @@ To create an evaluation in Galtea, you need to specify:
 </ResponseField>
 
 Once an evaluation is created, you can execute [evaluation tasks](/concepts/product/evaluation/task) to assess the performance of the selected version against the test challenges.
+
+## SDK Integration
+
+<SDKEvaluationServiceCard />
 
