--- a/concepts/product/evaluation/task.mdx
+++ b/concepts/product/evaluation/task.mdx
@@ -8,6 +8,7 @@ iconType: "solid"
 import TestCard from '/snippets/cards/test-card.mdx';
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
 import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
+import SDKEvaluationTaskServiceCard from '/snippets/cards/sdk-evaluation-task-service-card.mdx';
 
 ## What is an Evaluation Task?
 
@@ -33,6 +34,10 @@ Evaluation tasks follow a specific lifecycle:
   <EvaluationCard />
   <MetricTypeCard />
 </CardGroup>
+
+## SDK Integration
+
+<SDKEvaluationTaskServiceCard />
 
 ## Task Creation Properties
 
