--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -5,6 +5,8 @@ icon: "clipboard-list"
 iconType: "solid"
 ---
 
+import SDKTestServiceCard from '/snippets/cards/sdk-test-service-card.mdx';
+
 ## What is a Test?
 
 A test in Galtea is a set of challenges designed to evaluate the performance of a [product](/concepts/product). A test file provides simulations of interactions with the product (and, in [quality tests](/concepts/product/test/quality-tests), expected outcomes for each interaction).
@@ -53,6 +55,10 @@ Tests are used in [evaluation tasks](/concepts/product/evaluation/task) to asses
 <Card title="Create an Evaluation" icon="badge-check" iconType="solid" href="/concepts/product/evaluation">
   Learn how to use tests in evaluations
 </Card>
+
+## SDK Integration
+
+<SDKTestServiceCard />
 
 ## Test Properties
 
