--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -5,6 +5,8 @@ icon: "swatchbook"
 iconType: "solid"
 ---
 
+import SDKVersionServiceCard from '/snippets/cards/sdk-version-service-card.mdx';
+
 ## What is a Version?
 
 A version in Galtea represents a specific iteration of a [product](/concepts/product). Versions allow you to track changes to your product over time and compare different implementations against the same tests.
@@ -22,6 +24,9 @@ One of the key benefits of tracking versions in Galtea is the ability to compare
   Learn how to compare different versions using the same test
 </Card>
 
+## SDK Integration
+
+<SDKVersionServiceCard />
 
 ## Version Properties
 
