--- a/sdk/api/evaluation-service.mdx
+++ b/sdk/api/evaluation-service.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Evaluation Service'
 description: "Exploring the Evaluation Service API in the Galtea SDK"
-icon: "objects-column"
+icon: "badge-check"
+iconType: "solid"
 ---
 
 The Evaluation Service in the Galtea SDK allows you to manage [evaluations](/concepts/product/evaluation) for assessing your products.
