--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Evaluation Task Service'
 description: "Exploring the Evaluation Task Service API in the Galtea SDK"
-icon: "objects-column"
+icon: "clipboard-check"
+iconType: "solid"
 ---
 
 The Evaluation Task Service in the Galtea SDK allows you to manage [evaluation tasks](/concepts/product/evaluation/task) for assessing your products.
