--- a/sdk/api/product-service.mdx
+++ b/sdk/api/product-service.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Product Service'
 description: "Exploring the Product Service API in the Galtea SDK"
-icon: "objects-column"
+icon: "box"
+iconType: "solid"
 ---
 
 The Product Service in the Galtea SDK allows you to manage [products](/concepts/product) that you want to evaluate.
