--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -1,10 +1,11 @@
 ---
 title: 'Version Service'
 description: "Exploring the Version Service API in the Galtea SDK"
-icon: "objects-column"
+icon: "swatchbook"
+iconType: "solid"
 ---
 
-The Version Service in the Galtea SDK allows you to manage different iterations of your [products](/concepts/product).
+The Version Service in the Galtea SDK allows you to manage different iterations of your [products](/concepts/product) through [versions](/concepts/product/version).
 This Service is exposed by the `galtea.versions` object and we will further explore its API down below.
 
 <Info>
