--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -7,6 +7,7 @@ iconType: "solid"
 
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
 import EvaluationTaskCard from '/snippets/cards/evaluation-task-card.mdx';
+import SDKMetricsServiceCard from '/snippets/cards/sdk-metrics-service-card.mdx';
 
 ## What are Metric Types?
 
@@ -170,3 +171,7 @@ The following table highlights the key differences between evaluation criteria a
   <EvaluationCard />
   <EvaluationTaskCard />
 </CardGroup>
+
+## SDK Integration
+
+<SDKMetricsServiceCard />
