--- a/sdk/api/test-service.mdx
+++ b/sdk/api/test-service.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Test Service'
 description: "Exploring the Test Service API in the Galtea SDK"
-icon: "objects-column"
+icon: "clipboard-list"
+iconType: "solid"
 ---
 
 The Test Service in the Galtea SDK allows you to manage [tests](/concepts/product/test) for evaluating your products.
