--- a/sdk/api/evaluation-service.mdx
+++ b/sdk/api/evaluation-service.mdx
@@ -23,7 +23,7 @@ evaluation = galtea.evaluations.create(
 )
 ```
 <Info>
-  See a complete example of creating an evaluation in our [Create Evaluation example](/sdk/examples/create-evaluation).
+  See a complete example of creating an evaluation in our [Run Evaluations example](/sdk/examples/create-evaluation).
 </Info>
 
 <ResponseField name="test_id" type="string" required>
