--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -27,7 +27,7 @@ evaluation_task = galtea.evaluation_tasks.create(
 ```
 
 <Info>
-  See an example of running evaluation tasks in our [Create Evaluation example](/sdk/examples/create-evaluation).
+  See an example of running evaluation tasks in our [Run Evaluations example](/sdk/examples/create-evaluation).
 </Info>
 
 <ResponseField name="evaluation_id" type="string" required>
