--- a/sdk/api/test-service.mdx
+++ b/sdk/api/test-service.mdx
@@ -21,12 +21,12 @@ test = galtea.tests.create(
     name="example-test-tutorial",
     type="QUALITY",
     product_id="YOUR_PRODUCT_ID",
-    test_file_path="tutorial_tests.csv"
+    ground_truth_file_path="path/to/knowledge_file.pdf"
 )
 ```
 
 <Info>
-  See a complete example of creating tests in our [Create a Test example](/sdk/examples/create-test).
+  See a complete example of creating **custom tests** in our [Create a Custom Test example](/sdk/examples/create-test).
 </Info>
 
 <ResponseField name="name" type="string" required>
