--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Create a Test'
+title: 'Create a Custom Test'
 description: "Learn how to create and upload custom tests using the SDK"
 icon: "clipboard-list"
 ---
