--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -35,14 +35,14 @@ version = galtea.versions.create(
 
 <ResponseField name="optional_props" type="dict[str, str]">
   Additional properties for the version, possible keys include:
-    - dataset_description: Description of the dataset used
-    - dataset_uri: URI to the dataset
-    - description: Version description
-    - endpoint: API endpoint of the version
-    - foundational_model: Base model information
-    - guardrails: Guardrails configuration
-    - provider: Model provider
-    - system_prompt: Default system prompt of the model
+    - **dataset_description**: Description of the dataset used
+    - **dataset_uri**: URI to the dataset
+    - **description**: Version description
+    - **endpoint**: API endpoint of the version
+    - **foundational_model**: Base model information
+    - **guardrails**: Guardrails configuration
+    - **provider**: Model provider
+    - **system_prompt**: Default system prompt of the model
 </ResponseField>
 
 ## Listing Versions
