--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -170,8 +170,8 @@ evaluation = galtea.evaluations.create(
 )
 
 # Run an evaluation task
-galtea.evaluate(
-    metrics=["accuracy_v0"],
+galtea.evaluation_tasks.create(
+    metric_type="accuracy_v0",
     evaluation_id=evaluation.id,
     input="What is the capital of Spain?",
     actual_output="Barcelona",  # From your AI product
