--- a/sdk/api/galtea.mdx
+++ b/sdk/api/galtea.mdx
@@ -30,8 +30,6 @@ The `Galtea` class provides access to the following services:
 - [`evaluations`](/sdk/api/evaluation-service): Access [evaluation](/concepts/product/evaluation) related functionalities.
 - [`evaluation_tasks`](/sdk/api/evaluation-task-service): Access [evaluation task](/concepts/product/evaluation/task) related functionalities.
 
-There is also a method in the `Galtea` class that wraps the `create` function from the [`evaluation_tasks`](/sdk/api/evaluation-task-service). We highly recommend using this method as it formats the response output and allows you to create an evaluation task directly from the `Galtea` class object:
-- [`galtea.evaluate()`](/sdk/api/evaluation-task-service#create-evaluation-task): Create an evaluation task and get the result.
 
 ### Example
 
@@ -46,6 +44,12 @@ products = galtea.products.list()
 print(products)
 ```
 
+### Running Evaluation Tasks with multiple Metrics
+
+The method `evaluate` from the `Galtea` class allows you to use multiple metrics in a single *create* call of the evaluation task.
+
 <Info>
-  Check our [usage guide](/sdk/usage) for more basic examples on how to use the SDK.
+  It is a wrapper of the `create` function from the [`evaluation tasks service`](/sdk/api/evaluation-task-service#create-evaluation-task) that helps create evaluation tasks in batch, one for each metric provided.
 </Info>
+
+You can see an example of how to use the `galtea.evaluate(...)` method [here](/sdk/examples/create-evaluation#batch-processing-evaluation-tasks).
