--- a/sdk/api/product-service.mdx
+++ b/sdk/api/product-service.mdx
@@ -23,6 +23,13 @@ This method allows you to list all products.
 ```python
 products = galtea.products.list()
 ```
+<ResponseField name="offset" type="int">
+  The number of products to skip before starting to collect the result set.
+</ResponseField>
+
+<ResponseField name="limit" type="int">
+  The maximum number of products to return.
+</ResponseField>
 
 ## Retrieving Product
 
