--- a/sdk/api/evaluation-service.mdx
+++ b/sdk/api/evaluation-service.mdx
@@ -46,6 +46,14 @@ evaluations = galtea.evaluations.list(product_id="YOUR_PRODUCT_ID")
   The ID of the product for which you want to list evaluations.
 </ResponseField>
 
+<ResponseField name="offset" type="int">
+  The number of evaluations to skip before starting to collect the result set.
+</ResponseField>
+
+<ResponseField name="limit" type="int">
+  The maximum number of evaluations to return.
+</ResponseField>
+
 ## Retrieving Evaluation
 
 This method allows you to retrieve a specific evaluation by its ID.
