--- a/sdk/api/metrics-service.mdx
+++ b/sdk/api/metrics-service.mdx
@@ -39,6 +39,14 @@ This method allows you to list all metrics.
 metrics = galtea.metrics.list()
 ```
 
+<ResponseField name="offset" type="int">
+  The number of metrics to skip before starting to collect the result set.
+</ResponseField>
+
+<ResponseField name="limit" type="int">
+  The maximum number of metrics to return.
+</ResponseField>
+
 ## Retrieving Metric
 
 This method allows you to retrieve a specific metric by its ID.
