--- a/sdk/api/galtea.mdx
+++ b/sdk/api/galtea.mdx
@@ -48,5 +48,5 @@ print(products)
 
 The method `evaluate` from the `Galtea` class is both a wrapper and a shortcut for the `create` function from the [`evaluation tasks service`](/sdk/api/evaluation-task-service#create-evaluation-task) that formats the output to make it prettier.
 
-It also accepts the same parameter as the `galtea.evaluation_tasks.create()`.
+It also accepts the same parameters as the `galtea.evaluation_tasks.create()` function.
 You can see an example of how to use the `galtea.evaluate(...)` method [here](/sdk/examples/create-evaluation#batch-processing-evaluation-tasks).
