improve note about galtea evaluate function

--- a/sdk/examples/create-evaluation.mdx
+++ b/sdk/examples/create-evaluation.mdx
@@ -78,7 +78,7 @@ print("All evaluation tasks submitted")
 ```
 
 <Info>
-  The `galtea.evaluate` method is a wrapper around the `evaluation_tasks.create` method that allows you to create multiple evaluation tasks in batch. **It does not create Evluation Tasks with multiple metrics** but rather creates multiple Evaluation Tasks with a single metric each, all in one go.
+  The `galtea.evaluate` method is a wrapper around the `evaluation_tasks.create` method that formats the output for better readability. It accepts the same parameters as `galtea.evaluation_tasks.create()`.
 </Info>
 
 ## Retrieving Evaluation Results
