Improved documentation linking

--- a/concepts/product/evaluation/task.mdx
+++ b/concepts/product/evaluation/task.mdx
@@ -22,7 +22,7 @@ Evaluation tasks follow a specific lifecycle:
 
 <Steps>
   <Step title="Inference">Perform inference on the LLM product to generate an output using the test's input and context</Step>
-  <Step title="Creation">Trigger an evaluation task. It will appear in the Evaluation's details page with the status "pending"</Step>
+  <Step title="Creation">[Trigger an evaluation task](/sdk/examples/create-evaluation). It will appear in the Evaluation's details page with the status "pending"</Step>
   <Step title="Processing">Galtea's evaluation system processes the task using evaluation criteria of the selected metric type</Step>
   <Step title="Completion">Once processed, the status changes to "completed" and the [results](#task-results-properties) are available</Step>
 </Steps>
