--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -15,7 +15,7 @@ An evaluation in Galtea is a link between a specific [version](/concepts/product
 
 <Steps>
   <Step title="Create an Evaluation">Link a specific [version](/concepts/product/version) with a [test](/concepts/product/test) to create an evaluation</Step>
-  <Step title="Execute Evaluation Tasks">For each challenge in the test, run one or more [evaluation tasks](/concepts/product/evaluation/task) to assess performance using different [metric types](/concepts/metric-type)</Step>
+  <Step title="Execute Evaluation Tasks">For each challenge in the test, [run](/sdk/examples/create-evaluation) one or more [evaluation tasks](/concepts/product/evaluation/task) to assess performance using different [metric types](/concepts/metric-type)</Step>
   <Step title="Review Results">Compare results across different versions of the same product</Step>
 </Steps>
 
@@ -28,7 +28,7 @@ The core components of an evaluation are its [evaluation tasks](/concepts/produc
 </Card>
 
 <Note>
-  Creating an evaluation does not automatically run evaluation tasks. You need to execute tasks separately to generate scores and insights.
+  Creating an evaluation does not automatically run *[evaluation tasks](/concepts/product/evaluation/task)*. You need to [execute *evaluation tasks*](/sdk/examples/create-evaluation) separately to generate scores and insights.
 </Note>
 
 ## Results Visualization
@@ -56,7 +56,7 @@ To create an evaluation in Galtea, you need to specify:
   The unique identifier of the test to be used in the evaluation.
 </ResponseField>
 
-Once an evaluation is created, you can execute [evaluation tasks](/concepts/product/evaluation/task) to assess the performance of the selected version against the test challenges.
+Once an evaluation is created, you can [execute](/concepts/product/evaluation/task) [evaluation tasks](/concepts/product/evaluation/task) to assess the performance of the selected version against the test challenges.
 
 ## SDK Integration
 
