Fix incorrect param name

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -171,7 +171,7 @@ evaluation = galtea.evaluations.create(
 
 # Run an evaluation task
 galtea.evaluation_tasks.create(
-    metric_type="accuracy_v0",
+    metric=["accuracy_v0"],
     evaluation_id=evaluation.id,
     input="What is the capital of Spain?",
     actual_output="Barcelona",  # From your AI product
