remove required param from API

--- a/sdk/api/test-case-service.mdx
+++ b/sdk/api/test-case-service.mdx
@@ -39,7 +39,7 @@ test_case = galtea.tests_cases.create(
   The input for the test case. This is the question or prompt you want to send to your model for a later evaluation.
 </ResponseField>
 
-<ResponseField name="expected_output" type="string" required>
+<ResponseField name="expected_output" type="string">
   The expected output for the input given. This is the correct answer or response you want to evaluate against.
 </ResponseField>
 
