--- a/introduction.mdx
+++ b/introduction.mdx
@@ -60,8 +60,4 @@ Galtea is built around several key concepts that work together to provide compre
   <TestCard />
   <EvaluationCard />
   <MetricTypeCard />
-</CardGroup>import ProductCard from '/snippets/cards/product-card.mdx';
-import VersionCard from '/snippets/cards/version-card.mdx';
-import TestCard from '/snippets/cards/test-card.mdx';
-import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
-import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
+</CardGroup>
